# Final-Project-G15

./: .gitignore  README.md  addressbook.pkl  commands.md  goit-pycore-hw-08.py  pyproject.toml
assistant_bot/: __init__.py  main.py
assistant_bot/handlers/: __init__.py  commands.py  notes_commands.py
assistant_bot/models/: __init__.py  address_book.py  fields.py  notes.py  record.py
assistant_bot/services/: __init__.py  birthday_service.py  search_service.py
assistant_bot/utils/: __init__.py  decorators.py  parser.py  storage.py
